<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:minHeight="?attr/actionBarSize"
        android:elevation="10dp"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title3DS"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:outlineSpotShadowColor="@color/white"
            android:text="@string/btnCancel"
            android:textSize="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <!-- Header  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/imageAnyBank"
                    android:layout_width="135dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_any_bank"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="28dp"
                android:paddingBottom="20dp">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp" >

                    <ImageView
                        android:id="@+id/imageCardNetwork"
                        android:layout_width="110dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_card_network"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>



        <!-- Line  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_light"/>


        </LinearLayout>

        <!-- Text  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/titlePurchase"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionOTP"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:textColor="@color/black"
                            android:text="@string/titleMerchant"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="12dp"
                            android:textColor="@color/black"
                            android:text="@string/titleAmount"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="12dp"
                            android:textColor="@color/black"
                            android:text="@string/titleCard"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/txtMerchant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/txtTotalAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:paddingTop="12dp"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/txtCardNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:paddingTop="12dp"
                            android:textSize="16dp" />


                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textColor="@color/black"
                    android:text="(OTP: 1234)"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/descriptionCode"
                    android:textAlignment="center"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descriptionCodeHere"
                    android:inputType="text"
                    android:layout_marginTop="4dp"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:background="@drawable/edittext_bg" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSubmit"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:backgroundTint="@color/background_3ds_button"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"/>

                <ImageView
                    android:id="@+id/imageKushki"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:src="@drawable/ic_kushki_logo" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>